--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE htnl>
-<htnl lang="ru">
-<head>  
-  <title>Привет мир</title>title>
+<htnl>
+<head>
+  <tittle>Моя презентация</tittle>
 </head>
-</body>
-  <h1>Привет мир</h1>
+<body>
+
+  <p>
+    Нажмите, чтобы скачать или открыть презентацию:
+    <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
+    Нажмите, чтобы скачать или открыть index/html:
+    <a href="index.html">Файл проверки работы с кириллицей .html</a>
+  </p>
+
 </body>
 </htnl>
